Switch Swagger Doc generation to to TSOA
